# roshana_03848

./: README.md  docker-compose.yml
rm_oms_apis/: .env  Dockerfile  pyproject.toml  requirements.txt
rm_oms_apis/rm_oms_apis/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  secretekey.py
rm_oms_app/: Dockerfile  pyproject.toml  requirements.txt
rm_oms_app/rm_oms_app/: app.py
rm_oms_app/rm_oms_app/pages/: admin_dashboard.py  login.py  register.py  user_dashboard.py
